<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/qwe"
        style="@style/topText"
        android:layout_weight="5"
        android:textColor="#ffffff"
        android:gravity="bottom|end"
        android:textSize="45sp"/>

    <TextView
        android:id="@+id/math_operation"
        style="@style/topText"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:gravity="bottom|end"
        android:textSize="45sp"/>

    <TextView
        android:id="@+id/result"
        style="@style/topText"
        android:layout_weight="1"
        android:textColor="#ededed"
        android:gravity="top|end"
        android:text="@string/text_zero"
        android:textSize="25sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <!-- Первый ряд -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_AC"
                android:text="@string/btn_AC" />
            <ImageView
                android:id="@+id/btn_back"
                style="@style/ActionButton"
                android:contentDescription="@string/btn_back"
                android:src="@drawable/back_foreground"/>
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_percent"
                android:text="@string/btn_percent"/>
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_division"
                android:text="@string/btn_division"
                android:fontFamily="@font/fredoka_light"
                android:textSize="45sp"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_7"
                android:text="@string/btn_7"/>
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_8"
                android:text="@string/btn_8"/>
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_9"
                android:text="@string/btn_9"/>
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_multiplication"
                android:text="@string/btn_multiplication"
                android:fontFamily="@font/fredoka_light"
                android:textSize="45sp"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_4"
                android:text="@string/btn_4"/>
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_5"
                android:text="@string/btn_5"/>
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_6"
                android:text="@string/btn_6"/>
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_minus"
                android:text="@string/btn_minus"
                android:fontFamily="@font/fredoka_light"
                android:textSize="45sp"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_1"
                android:text="@string/btn_1"/>
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_2"
                android:text="@string/btn_2"/>
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_3"
                android:text="@string/btn_3"/>
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_plus"
                android:text="@string/btn_plus"
                android:fontFamily="@font/fredoka_light"
                android:textSize="45sp"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_swap"
                android:text=""/>
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_0"
                android:text="@string/btn_0"/>
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_point"
                android:text="@string/btn_point"/>
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_equals"
                android:backgroundTint="#ff8e00"
                android:textColor="@color/white"
                android:text="@string/btn_equals"
                android:fontFamily="@font/fredoka_light"
                android:textSize="45sp"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
